move wrapping cards-row div into RoomsList to correct display of room cards

--- a/src/Components/RoomCard/RoomCard.css
+++ b/src/Components/RoomCard/RoomCard.css
@@ -1,11 +1,3 @@
-.cards-row {
-  display: flex;
-  gap: 1rem;
-  overflow-x: auto;
-  overflow-y: hidden;
-  padding: 1rem 0;
-}
-
 .card {
   flex: 1 0 8rem;
   color: #aaa;
